[Fix] Add user info in login response
